# redlib

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  app.json  compose.dev.yaml  compose.yaml  flake.nix  media.Caddyfile  redlib.container
scripts/: update_oauth_resources.sh
src/: app_state.rs  body.rs  client.rs  config.rs  duplicates.rs  fingerprint.rs  instance_info.rs  lib.rs  main.rs  oauth.rs  oauth_resources.rs  post.rs  search.rs  server.rs  settings.rs  subreddit.rs  user.rs  utils.rs
src/reddit/: gateway.rs  mod.rs  pool.rs  request.rs  session.rs  transport.rs
src/reddit/oauth/: mod.rs
static/: fingerprint.js
templates/: base.html  error.html
